--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "test:local": "truffle test ./test/test-local/* --network local",
     "compile:local": "truffle compile --reset --network local",
     "migrate:local": "truffle migrate --reset --network local",
-    "console:kovan": "truffle console --network kovan",
-    "compile:kovan": "truffle compile --reset --network kovan",
-    "migrate:kovan": "truffle migrate --reset --network kovan",
-    "test:kovan": "truffle test ./test/test-kovan/* --network kovan",
+    "console:ropsten": "truffle console --network ropsten",
+    "compile:ropsten": "truffle compile --reset --network ropsten",
+    "migrate:ropsten": "truffle migrate --reset --network ropsten",
+    "test:ropsten": "truffle test ./test/test-ropsten/* --network ropsten",
     "start-blank": "rm -rf client/src && cp -rf barebones/src client/"
   },
   "author": "masaun",
