Rename with arbitrageur-between-sogur-and-eth in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flash-swap-with-sogur",
+  "name": "arbitrageur-between-sogur-and-eth",
   "version": "1.0.0",
   "description": "",
   "directories": {
